samples/_failures_safe/1761370973_9c1bb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18fe6564.c: In function ‘main’:
./samples/SAFE/__tmp_18fe6564.c:157:24: error: missing terminating " character
  157 |                 printf("Error: Matrices must have same dimensions for addition.\
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_18fe6564.c:157:17: error: expected expression at end of input
  157 |                 printf("Error: Matrices must have same dimensions for addition.\
      |                 ^~~~~~
./samples/SAFE/__tmp_18fe6564.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18fe6564.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18fe6564.c:157:17: error: expected declaration or statement at end of input
